--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  font-family: 'Roboto', sans-serif;
 }
 
 .App {
@@ -18,6 +19,7 @@
 h1, h2, h3, h4, h5{
   font-family: 'Poppins', sans-serif;
   color: #444;
+  margin-bottom: 10px;
 }
 
 .timeline .day-box{
