--- a/src/App.css
+++ b/src/App.css
@@ -94,6 +94,9 @@ h1, h2, h3, h4, h5{
   width: 80%;
   margin: 20px auto 40px auto;
 }
+.modal.medium{
+  width: 500px;
+}
 .blackout{
   display: none;
   width: 100vw;
