--- a/src/App.css
+++ b/src/App.css
@@ -11,7 +11,7 @@
   align-items: center;
   height: 100vh;
   width: 100vw;
-  background-color: rgb(240, 240, 240);
+  background-color: #f5f5f5;
   position: relative;
   z-index: 1;
 }
@@ -22,41 +22,68 @@ h1, h2, h3, h4, h5{
   margin-bottom: 10px;
 }
 
+.timeline{
+  animation-duration: .8s;
+}
+
+.box {
+  position: relative;
+  display: inline-block;
+}
+
 .timeline .day-box{
   height: 80px;
   width: 80px;
   background-color: white;
   box-shadow: 0 6px 5px rgba(0, 0, 0, .1);
+  border: none;
+  outline: none;
   border-radius: 10px;
   margin: 0 15px;
   position: relative;
-  display: inline-block;
-  cursor: pointer;
+  z-index: 5;
+  cursor: pointer !important;
 }
 
-.timeline span{
+.timeline .day-box span.day{
   color: #666;
   font-weight: bold;
   font-family: 'Poppins', sans-serif;
-  font-size: 2em;
+  font-size: 1.5em;
   position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%)
 }
 
-.timeline .day-box .task{
+.box > span.task{
   position: absolute;
-  left: 0px;
-  bottom: 20px;
-  width: 15px;
-  height: 15px;
+  z-index: 1;
+  left: 10px;
+  bottom: 6px;
+  border-radius: 5px;
+  max-height: 80%;
+  width: 10px;
   background-color: #ff3c3c;
-  border-radius: 50%;
 }
 
-.day-box .is-today{
-  color:hsl(207, 100%, 66%) ;
+.day-box.is-today span{
+  color:#ff3c3c !important;
+}
+
+.day-box.is-today::after{
+  content: 'Today';
+  font-family: 'Poppins', sans-serif;
+  font-weight: 400;
+  font-size: .8em;
+  border-radius: 5px;
+  color: white;
+  background-color: #ff3c3c;
+  padding: 5px 5px 5px 5px;
+  position: absolute;
+  z-index: 1 !important;
+  top: -30px;
+  left: 15px;
 }
 
 /* MODAL */
@@ -67,36 +94,49 @@ h1, h2, h3, h4, h5{
   display: none !important;
 }
 .modal{
+  margin-top: 30px;
+  border: 1px solid #ddd;
+  /*width: 500px;*/
+  animation-duration: .5s;
   display: none;
   background-color: white;
-  padding: 40px 20px;
+  padding: 35px;
   border-radius: 10px;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+  /*position: fixed;
+  top: 35%;
+  left: 35%;*/
+  /*transform: translate(-50%, -50%);*/
   z-index: 3;
-  box-shadow: 0 6px 5px rgba(0, 0, 0, .1);
+  /*box-shadow: 0 6px 5px rgba(0, 0, 0, .1);*/
 }
-.modal .modal-body,
 .modal .modal-header{
-  text-align: center;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 20px;
+}
+.modal .modal-header h2{
+  margin: 0;
+}
+
+.modal .modal-body p {
+  color: #868686;
+  margin-bottom: 8px;
+  text-transform: capitalize;
 }
 .modal .modal-body input[type="text"]{
   font-size: 1.8em;
-  text-align: center;
   font-family: 'Roboto', sans-serif;
   outline: none;
-  padding: 10px 20px;
+  padding: 10px 0px;
   border: none;
   border-bottom: 1px solid #ddd;
-  display: block;
-  width: 80%;
-  margin: 20px auto 40px auto;
+  display: inline-block;
+  margin: 20px auto 30px auto;
 }
-.modal.medium{
+/*.modal.medium{
   width: 500px;
-}
+}*/
 .blackout{
   display: none;
   width: 100vw;
@@ -110,12 +150,25 @@ h1, h2, h3, h4, h5{
 
 /* BUTTONS */
 .btn{
-  margin: 0 10px;
-  font-size: 1.2em;
-  padding: 10px 25px;
+  margin-top: 20px;
+  font-size: .9em;
+  padding: 5px 20px;
   font-family: 'Poppins', sans-serif;
   border: none;
-  border-radius: 5px;
+  border-radius: 3px;
+  outline: none;
+  cursor: pointer;
+}
+.btn-sm{
+  display: inline-block;
+  margin: 20px 10px 0 10px;
+  font-size: 1em;
+  cursor: pointer;
+  padding: 3px 10px;
+  text-align: center;
+  font-family: 'Poppins', sans-serif;
+  border: none;
+  border-radius: 3px;
 }
 .btn-success{
   background-color: #148dff;
@@ -128,9 +181,65 @@ h1, h2, h3, h4, h5{
   font-weight: bold;
 }
 
+.add-btn{
+  margin-left: 20px;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+}
+.add-btn span{
+  margin-right: 5px;
+}
+.add-btn button{
+  border: none;
+  background: none;
+  font-size: 1.5em;
+  color: #ff3c3c;
+  /*position: absolute;
+  top: -10px;
+  right: -10px;*/
+}
+
+.delete-btn{
+  cursor: pointer;
+  margin-right: 10px;
+  padding: 0;
+  color: #ff3c3c;
+}
+
+.clear-btn i {
+  cursor: pointer;
+  margin-right: 10px;
+  padding: 0;
+  color: #5ed100;
+}
+
 /* EFFECTS */
 .blurred{
   filter: blur(2px)
+}
+
+.active-day{
+  box-shadow: none !important;
+  position: relative;
+  top: 5px;
+  border-bottom: 2px solid #148dff !important;
+}
+
+.day-box.active-day + span.task{
+  bottom: 3px;
+}
+
+/* flex */
+.flex{
+  display: flex;
+  justify-items: center;
+  justify-content: center;
+}
+
+.flex-center{
+  justify-items: center;
+  justify-content: center;
 }
 
 /* CLOCK */
@@ -149,18 +258,28 @@ h1, h2, h3, h4, h5{
 }
 
 /* loader */
-
 .loading{
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  position: absolute;
-  width: 100vw;
-  height: 100vh;
-  background-color: rgba(0, 0, 0, .8);
-  z-index: 4;
+  text-align: center;
+  font-size: 2em;
+  color: #ff3c3c;
 }
-.loading i{
-  font-size: 5em;
-  color: #fff;
+
+/* GRID */
+
+.row {
+  padding: 0;
+  display: flex;
+  justify-content: space-between;
+}
+
+.col{
+  padding: 0 10px;
+}
+
+.col-12{
+  width: 100%;
+}
+
+.col-6{
+  width: 50%;
 }
