--- a/src/App.css
+++ b/src/App.css
@@ -273,15 +273,18 @@ h1, h2, h3, h4, h5{
 .clock{
   text-align: center;
   display: block;
-  width: 100%;
+  width: 80%;
   margin: 0px auto 40px auto;
 }
 
 .clock h1{
   font-weight: 400;
-  font-size: 3em;
-  font-family: 'Poppins', sans-serif;
+  font-size: 1.5em;
+  font-family: 'Roboto', sans-serif;
   /*letter-spacing: 5px;*/
+}
+.clock span{
+  color: #ff3c3c;
 }
 
 /* loader */
