--- a/src/App.css
+++ b/src/App.css
@@ -2,56 +2,101 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Nunito', sans-serif;
+}
+
+body {
+  background-color: #F1F1F1;
 }
 
 .App {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 100vh;
   width: 100vw;
-  background-color: #f5f5f5;
   position: relative;
   z-index: 1;
 }
 
 h1, h2, h3, h4, h5{
-  font-family: 'Poppins', sans-serif;
+  font-family: 'Nunito', sans-serif;
   color: #444;
+  font-weight: 400;
   margin-bottom: 10px;
+}
+
+.nav {
+  width: 100%;
+  display: none;
+  justify-content: space-between;
+  align-items: center;
+  padding: 35px 35px;
+  margin-bottom: 20px;
+}
+.nav i {
+  font-size: 1.3em;
+  color: gray;
+}
+.nav span.logo {
+  color: #000;
+  font-family: 'Nunito', sans-serif;
+  font-size: 1.2em;
 }
 
 .timeline{
   animation-duration: .8s;
-  display: flex;
-  justify-content: space-around;
 }
 
 .box {
+  transition: all .2s ease-in-out;
   position: relative;
   display: inline-block;
+}
+
+.timeline .box::after{
+  content: '';
+  width: 50%;
+  height: 15px;
+  display: block;
+  position: absolute;
+  z-index: 1;
+  bottom: 0px;
+  left: 21px;
+  background-color:rgba(0, 0, 0, .2);
+  filter: blur(6px);
 }
 
 .timeline .day-box{
   height: 80px;
   width: 80px;
   background-color: white;
-  box-shadow: 0 6px 5px rgba(0, 0, 0, .1);
   border: none;
   outline: none;
   border-radius: 10px;
   margin: 0 15px;
   position: relative;
-  z-index: 5;
+  z-index: 3;
   cursor: pointer !important;
 }
 
+
+
 @media (max-width: 400px) {
+  .nav{
+    display: flex;
+  }
+  .timeline{
+    width: 150%;
+    position: relative;
+    margin: 45px 0 45px 0;
+    left: -73px;
+  }
+  .timeline .box.active {
+    transform: scale(1.3);
+    display: inline-block;
+    margin: 0 40px;
+  }
   .timeline .day-box {
-    width: 50px;
-    height: 50px;
-    margin: 0 8px;
+    width: 80px;
+    height: 80px;
+    margin: 0 12px;
   }
   .timeline .day-box span.day{
     font-size: 1em !important;
@@ -64,17 +109,22 @@ h1, h2, h3, h4, h5{
     left: 0px !important;
   }
   .box > span.task{
-    left: 3px !important;
+    left: 7px !important;
   }
-  .day-box.active-day + span.task{
+  .box.active-day + span.task{
     bottom: 0px !important;
+  }
+  .modal{
+    padding: 35px 30px;
+    border-radius: 0px !important;
   }
 }
 
 .timeline .day-box span.day{
   color: #666;
   font-weight: bold;
-  font-family: 'Poppins', sans-serif;
+  text-transform: lowercase;
+  font-family: 'Nunito', sans-serif;
   font-size: 1.5em;
   position: absolute;
   top: 50%;
@@ -86,25 +136,25 @@ h1, h2, h3, h4, h5{
   position: absolute;
   z-index: 1;
   left: 10px;
-  bottom: 6px;
+  bottom: 8px;
   border-radius: 5px;
   max-height: 80%;
   width: 10px;
-  background-color: #ff3c3c;
+  background-color: #FF3A69;
 }
 
 .day-box.is-today span{
-  color:#ff3c3c !important;
+  color:#FF3A69 !important;
 }
 
 .day-box.is-today::after{
   content: 'Today';
-  font-family: 'Poppins', sans-serif;
+  font-family: 'Nunito', sans-serif;
   font-weight: 400;
   font-size: .8em;
   border-radius: 5px;
   color: white;
-  background-color: #ff3c3c;
+  background-color: #FF3A69;
   padding: 5px 5px 5px 5px;
   position: absolute;
   z-index: 1 !important;
@@ -121,20 +171,13 @@ h1, h2, h3, h4, h5{
 }
 .modal{
   margin-top: 30px;
-  border: 1px solid #ddd;
-  /*width: 500px;*/
   animation-duration: .5s;
   display: none;
   background-color: white;
   padding: 35px;
   border-radius: 10px;
-  /*position: fixed;
-  top: 35%;
-  left: 35%;*/
-  /*transform: translate(-50%, -50%);*/
-  z-index: 3;
-  /*box-shadow: 0 6px 5px rgba(0, 0, 0, .1);*/
 }
+
 .modal .modal-header{
   display: flex;
   justify-content: space-between;
@@ -152,7 +195,7 @@ h1, h2, h3, h4, h5{
 }
 .modal .modal-body input[type="text"]{
   font-size: 1.8em;
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Nunito', sans-serif;
   outline: none;
   padding: 10px 0px;
   border: none;
@@ -179,7 +222,7 @@ h1, h2, h3, h4, h5{
   margin-top: 20px;
   font-size: .9em;
   padding: 5px 20px;
-  font-family: 'Poppins', sans-serif;
+  font-family: 'Nunito', sans-serif;
   border: none;
   border-radius: 3px;
   outline: none;
@@ -192,7 +235,7 @@ h1, h2, h3, h4, h5{
   cursor: pointer;
   padding: 3px 10px;
   text-align: center;
-  font-family: 'Poppins', sans-serif;
+  font-family: 'Nunito', sans-serif;
   border: none;
   border-radius: 3px;
 }
@@ -202,7 +245,7 @@ h1, h2, h3, h4, h5{
   font-weight: bold;
 }
 .btn-danger{
-  background-color: #ff3c3c;
+  background-color: #FF3A69;
   color: white;
   font-weight: bold;
 }
@@ -220,21 +263,21 @@ h1, h2, h3, h4, h5{
   border: none;
   background: none;
   font-size: 1.5em;
-  color: #ff3c3c;
+  color: #FF3A69;
 }
 
 .delete-btn i{
   cursor: pointer;
   margin-right: 10px;
   padding: 0;
-  color: #ff3c3c;
+  color: #FF3A69;
 }
 
 .clear-task i {
   cursor: pointer;
   margin-right: 10px;
   padding: 0;
-  color: #5ed100;
+  color: #22E570;
 }
 .clear-task span.clear:hover{
   cursor: pointer;
@@ -246,11 +289,14 @@ h1, h2, h3, h4, h5{
   filter: blur(2px)
 }
 
+.color-red{
+  color: #FF3A69;
+  font-weight: bold;
+}
+
 .active-day{
-  box-shadow: none !important;
   position: relative;
-  top: 5px;
-  border-bottom: 2px solid #148dff !important;
+  transform: scale(1.3);
 }
 
 .day-box.active-day + span.task{
@@ -271,27 +317,27 @@ h1, h2, h3, h4, h5{
 
 /* CLOCK */
 .clock{
+  width: 38%;
+  background: #fff;
+  padding: 20px;
   text-align: center;
-  display: block;
-  width: 80%;
-  margin: 0px auto 40px auto;
+  display: inline-block;
+  border-radius: 10px;
 }
 
 .clock h1{
-  font-weight: 400;
-  font-size: 1.5em;
-  font-family: 'Roboto', sans-serif;
-  /*letter-spacing: 5px;*/
-}
-.clock span{
-  color: #ff3c3c;
+  font-weight: bold;
+  color: #FF3A69;
+  font-size: 1.2em;
+  margin-bottom: 0;
+  font-family: 'Nunito', sans-serif;
 }
 
 /* loader */
 .loading{
   text-align: center;
   font-size: 2em;
-  color: #ff3c3c;
+  color: #FF3A69;
 }
 
 /* GRID */
