--- a/src/App.css
+++ b/src/App.css
@@ -4,7 +4,7 @@
 @import './css/Timeline.css';
 @import './css/grid.css';
 @import './css/modal.css';
-@import './css/slideMenu.css';
+@import './css/SlideMenu.css';
 @import './css/tasksDisplay.css';
 
 * {
