--- a/src/css/Clock.css
+++ b/src/css/Clock.css
@@ -1,37 +1,44 @@
-.clock{
-    width: 38%;
-    background: #fff;
-    padding: 20px;
-    text-align: center;
-    display: inline-block;
-    border-radius: 10px;
-  }
-  
-  .clock h1{
-    font-weight: bold;
-    color: #FF3A69;
-    font-size: 1.2em;
-    margin-bottom: 0;
-    font-family: 'Nunito', sans-serif;
-  }
-  
-  .panel{
-    width: 46%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    float: left;
-    height: 110px;
-    background: #fff;
-    padding: 20px;
-    text-align: center;
-    border-radius: 10px;
-  }
-  
-  .panel h1{
-    font-weight: bold;
-    color: #FF3A69;
-    font-size: 1.2em;
-    margin-bottom: 0;
-    font-family: 'Nunito', sans-serif;
-  }
+.clock {
+  width: 38%;
+  background: #fff;
+  padding: 20px;
+  text-align: center;
+  display: inline-block;
+  border-radius: 10px;
+}
+
+.clock h1 {
+  font-weight: bold;
+  color: #FF3A69;
+  font-size: 1.2em;
+  margin-bottom: 0;
+  font-family: 'Nunito', sans-serif;
+}
+
+.panel {
+  width: 46%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  float: left;
+  height: 110px;
+  background: #fff;
+  padding: 20px;
+  text-align: center;
+  border-radius: 10px;
+}
+
+.panel h1 {
+  font-weight: bold;
+  color: #FF3A69;
+  font-size: 1.2em;
+  margin-bottom: 0;
+  font-family: 'Nunito', sans-serif;
+}
+/*# sourceMappingURL=Clock.css.map */
