--- a/src/css/Timeline.css
+++ b/src/css/Timeline.css
@@ -1,152 +1,158 @@
+.timeline {
+  -webkit-animation-duration: .8s;
+          animation-duration: .8s;
+}
 
-.timeline{
-    animation-duration: .8s;
+.box {
+  -webkit-transition: all .2s ease-in-out;
+  transition: all .2s ease-in-out;
+  position: relative;
+  display: inline-block;
+}
+
+.timeline .box::after {
+  content: '';
+  width: 50%;
+  height: 15px;
+  display: block;
+  position: absolute;
+  z-index: 1;
+  bottom: 0px;
+  left: 21px;
+  background-color: rgba(0, 0, 0, 0.2);
+  -webkit-filter: blur(6px);
+          filter: blur(6px);
+}
+
+.timeline .day-box {
+  height: 80px;
+  width: 80px;
+  margin: 0 15px;
+  border-radius: 10px;
+  background-color: white;
+  border: none;
+  outline: none;
+  z-index: 3;
+  position: relative;
+  cursor: pointer !important;
+}
+
+.day-box.is-selected + span.task {
+  bottom: 3px;
+}
+
+.length-counter {
+  color: #ccc;
+  float: right;
+  font-size: .7em;
+}
+
+.day .is-today {
+  margin-top: -4px;
+  font-size: 0.5em;
+  color: #FF3A69;
+  display: block;
+  text-align: center;
+}
+
+.day-over::after {
+  content: '';
+  width: 135%;
+  height: 3px;
+  background-color: #000;
+  position: absolute;
+  z-index: 5;
+  opacity: .2;
+  top: 50%;
+  left: -16%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+  -webkit-transform: rotate(-45deg);
+          transform: rotate(-45deg);
+}
+
+.timeline .day-box span.day {
+  color: #666;
+  font-weight: bold;
+  text-transform: lowercase;
+  font-family: 'Nunito', sans-serif;
+  text-align: center;
+  font-size: 1.5em;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+}
+
+.box > span.task {
+  position: absolute;
+  z-index: 1;
+  max-height: 80%;
+  width: 10px;
+  border-radius: 5px;
+}
+
+.box span.task.undone {
+  left: 10px;
+  bottom: 8px;
+  background-color: #FF3A69;
+}
+
+.box span.task.done {
+  left: 87px !important;
+  bottom: 8px;
+  background-color: #00cf6f;
+}
+
+.undone-tasks {
+  position: absolute;
+  bottom: 5px;
+  left: 7px;
+  font-size: 0.6em;
+  font-weight: bold;
+}
+
+.done-tasks {
+  position: absolute;
+  bottom: 5px;
+  right: 7px;
+  font-size: 0.6em;
+  font-weight: bold;
+}
+
+.max-tasks {
+  position: absolute;
+  top: 5px;
+  left: 7px;
+  font-size: 0.6em;
+  font-weight: 400;
+}
+
+@media (max-width: 400px) {
+  .timeline {
+    margin: 45px 0 45px 0;
   }
-  
-  .box {
-    transition: all .2s ease-in-out;
+  .timeline .box.is-selected {
+    -webkit-transform: scale(1.3);
+            transform: scale(1.3);
     position: relative;
     display: inline-block;
+    color: #222 !important;
   }
-  
-  .timeline .box::after{
-    content: '';
-    width: 50%;
-    height: 15px;
-    display: block;
-    position: absolute;
-    z-index: 1;
-    bottom: 0px;
-    left: 21px;
-    background-color:rgba(0, 0, 0, .2);
-    filter: blur(6px);
-  }
-  
-  .timeline .day-box{
-    height: 80px;
+  .timeline .day-box {
     width: 80px;
-    margin: 0 15px;
-    border-radius: 10px;
-    background-color: white;
-    border: none;
-    outline: none;
-    z-index: 3;
-    position: relative;
-    cursor: pointer !important;
+    height: 80px;
+    margin: 0 12px;
   }
-  
-  .day-box.is-selected + span.task{
-    bottom: 3px;
+  .timeline .day-box span.day {
+    font-size: 1.2em !important;
   }
-  
-  .length-counter{
-    color: #ccc;
-    float: right;
-    font-size: .7em;
+  .box > span.task {
+    left: 7px !important;
   }
-
-  .day .is-today {
-    margin-top: -4px;
-    font-size: 0.5em;
-    color: #FF3A69;
-    display: block;
-    text-align: center;
+  .box.is-selected + span.task {
+    bottom: 0px !important;
   }
-  
-  .day-over::after{
-    content: '';
-    width: 135%;
-    height: 3px;
-    background-color: #000;
-    position: absolute;
-    z-index: 5;
-    opacity: .2;
-    top: 50%;
-    left: -16%;
-    transform: translate(-50%, -50%);
-    transform: rotate(-45deg);
-  }
-  
-  .timeline .day-box span.day{
-    color: #666;
-    font-weight: bold;
-    text-transform: lowercase;
-    font-family: 'Nunito', sans-serif;
-    text-align: center;
-    font-size: 1.5em;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%)
-  }
-  
-  .box > span.task{
-    position: absolute;
-    z-index: 1;
-    max-height: 80%;
-    width: 10px;
-    border-radius: 5px;
-  }
-  
-  .box span.task.undone{
-    left: 10px;
-    bottom: 8px;
-    background-color: #FF3A69;
-  }
-  
-  .box span.task.done{
-    left: 87px !important;
-    bottom: 8px;
-    background-color: #00cf6f;
-  }
-  
-  .undone-tasks{
-    position: absolute;
-    bottom: 5px;
-    left: 7px;
-    font-size: 0.6em;
-    font-weight: bold;
-  }
-  
-  .done-tasks{
-    position: absolute;
-    bottom: 5px;
-    right: 7px;
-    font-size: 0.6em;
-    font-weight: bold;
-  }
-  
-  .max-tasks {
-    position: absolute;
-    top: 5px;
-    left: 7px;
-    font-size: 0.6em;
-    font-weight: 400;
-  }
-  
-  @media (max-width: 400px) {
-    .timeline{
-      margin: 45px 0 45px 0;
-    }
-    .timeline .box.is-selected {
-      transform: scale(1.3);
-      position: relative;
-      display: inline-block;
-      color: #222 !important;
-    }
-    .timeline .day-box {
-      width: 80px;
-      height: 80px;
-      margin: 0 12px;
-    }
-    .timeline .day-box span.day{
-      font-size: 1.2em !important;
-    }
-   
-    .box > span.task{
-      left: 7px !important;
-    }
-    .box.is-selected + span.task{
-      bottom: 0px !important;
-    }
-  }
+}
+/*# sourceMappingURL=Timeline.css.map */
