--- a/src/css/tasksDisplay.css
+++ b/src/css/tasksDisplay.css
@@ -1,34 +1,44 @@
-.tasks-display{
-    margin-top: 30px;
-    animation-duration: .5s;
-    display: none;
-    background-color: white;
-    padding: 35px;
-  }
-  
-  .tasks-display .header{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    margin-bottom: 20px;
-  }
-  .tasks-display .header h2{
-    margin: 0;
-  }
-  
-  .tasks-display .body p {
-    color: #868686;
-    margin-bottom: 8px;
-    text-transform: capitalize;
-  }
-  .tasks-display .body input[type="text"]{
-    font-family: 'Nunito', sans-serif;
-    outline: none;
-    padding: 0px 0px;
-    border: none;
-    display: inline-block;
-  }
-  
-  .tasks-display .body input[type="text"].edit{
-    border: 1px solid #ccc;
-  }
+.tasks-display {
+  margin-top: 30px;
+  -webkit-animation-duration: .5s;
+          animation-duration: .5s;
+  display: none;
+  background-color: white;
+  padding: 35px;
+}
+
+.tasks-display .header {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin-bottom: 20px;
+}
+
+.tasks-display .header h2 {
+  margin: 0;
+}
+
+.tasks-display .body p {
+  color: #868686;
+  margin-bottom: 8px;
+  text-transform: capitalize;
+}
+
+.tasks-display .body input[type="text"] {
+  font-family: 'Nunito', sans-serif;
+  outline: none;
+  padding: 0px 0px;
+  border: none;
+  display: inline-block;
+}
+
+.tasks-display .body input[type="text"].edit {
+  border: 1px solid #ccc;
+}
+/*# sourceMappingURL=TasksDisplay.css.map */
