--- a/src/App.css
+++ b/src/App.css
@@ -4,7 +4,6 @@
 @import './css/Timeline.css';
 @import './css/grid.css';
 @import './css/modal.css';
-@import './css/SlideMenu.css';
 @import './css/tasksDisplay.css';
 @import './css/ConfigPanel.css';
 
@@ -144,4 +143,37 @@ select {
   position: absolute;
   top: 50%;
   left: 46%;
+}
+
+.slideMenu {
+  -webkit-animation-duration: .6s;
+          animation-duration: .6s;
+  -webkit-animation-timing-function: ease;
+          animation-timing-function: ease;
+  width: 70%;
+  padding: 30px;
+  position: absolute;
+  z-index: 5;
+  background-color: #fff;
+  height: 100%;
+}
+
+.slideMenu > div {
+  margin-top: 30px;
+}
+
+.slideMenu button {
+  display: block;
+  font-size: 1em;
+  color: #868686;
+  text-decoration: none;
+  border: none;
+  background: none;
+  margin: 15px 0;
+  outline: none;
+}
+
+.slideMenu button i {
+  color: #ff3a69;
+  margin-right: 10px;
 }
