--- a/src/css/Timeline.sass
+++ b/src/css/Timeline.sass
@@ -72,12 +72,14 @@
 
 .box
   > span.task
+    transition: all .3s ease
     position: absolute
     z-index: 1
     max-height: 80%
     width: 10px
     border-radius: 5px
   span.task
+    transition: all .3s ease
     &.undone
       left: 10px
       bottom: 8px
