--- a/src/css/slideMenu.css
+++ b/src/css/slideMenu.css
@@ -1,33 +1,1 @@
-.slideMenu {
-  -webkit-animation-duration: .6s;
-          animation-duration: .6s;
-  -webkit-animation-timing-function: ease;
-          animation-timing-function: ease;
-  width: 70%;
-  padding: 30px;
-  position: absolute;
-  z-index: 5;
-  background-color: #fff;
-  height: 100%;
-}
-
-.slideMenu > div {
-  margin-top: 30px;
-}
-
-.slideMenu button {
-  display: block;
-  font-size: 1em;
-  color: #868686;
-  text-decoration: none;
-  border: none;
-  background: none;
-  margin: 15px 0;
-  outline: none;
-}
-
-.slideMenu button i {
-  color: #ff3a69;
-  margin-right: 10px;
-}
-/*# sourceMappingURL=SlideMenu.css.map */
+/* No CSS *//*# sourceMappingURL=SlideMenu.css.map */
