--- a/src/css/SlideMenu.sass
+++ b/src/css/SlideMenu.sass
@@ -1,23 +1,23 @@
-.slideMenu
-  animation-duration: .6s
-  animation-timing-function: ease
-  width: 70%
-  padding: 30px
-  position: absolute
-  z-index: 5
-  background-color: #fff
-  height: 100%
-  > div
-    margin-top: 30px
-  button
-    display: block
-    font-size: 1em 
-    color: #868686
-    text-decoration: none
-    border: none
-    background: none
-    margin: 15px 0
-    outline: none
-    i
-      color: #ff3a69
-      margin-right: 10px
+// .slideMenu
+//   transition: all .3s ease
+//   width: 0%
+//   padding: 30px
+//   position: absolute
+//   z-index: 5
+//   background-color: #fff
+//   > div
+//     margin-top: 30px
+//   button
+//     display: block
+//     font-size: 1em 
+//     color: #868686
+//     text-decoration: none
+//     border: none
+//     background: none
+//     margin: 15px 0
+//     outline: none
+//     i
+//       color: #ff3a69
+//       margin-right: 10px
+//   &.show
+//     width: 70%
